All_Component_DX/force-app/main/default/objects/User/fields/Is_Super_Dispatcher__c.field-meta.xml
<CustomField>
    <fullName>Is_Super_Dispatcher__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if user is Super Dispatcher.</description>
    <inlineHelpText>Flag to indicate if user is Super Dispatcher.</inlineHelpText>
    <label>Is Super Dispatcher?</label>
    <type>Checkbox</type>
</CustomField>