All_Component_DX/force-app/main/default/objects/User/fields/ServiceMax_User__c.field-meta.xml
<CustomField>
    <fullName>ServiceMax_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if User is a ServiceMax User</description>
    <label>ServiceMax User</label>
    <type>Checkbox</type>
</CustomField>